Issue #40; tweaking the colours a little bit to improve contrast/brightness in articles list

--- a/akorn_search/apps/search/static/search/sass/_colors.scss
+++ b/akorn_search/apps/search/static/search/sass/_colors.scss
@@ -1,11 +1,11 @@
 $white: #fff;
 $black: #000;
 
-$main_text: #666666;
+$main_text: #252525;
 $feature_color: #009bf7;
 $link_text: $feature_color;
 $header_text: #4d4d4d;
-$background: #f2f2f2;
+$background: #fafafa;
 $nav_text: $white;
 
 $hr_indent: #e2e2e2;
